# bind-score-engine

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml
notebooks/: exploration.ipynb
src/: bind_score.py  config.py  data_loader.py  evaluate.py  features.py  paths.py  train.py
tests/: test_data_loader.py  test_features.py  test_train.py
